--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
 
-    <title>MEIN NAME / FIRMENNAME</title>
+    <title>INVERSIONES INMOBILIARIAS / ONLINE</title>
     <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
 
     <script src="https://use.fontawesome.com/5fb7047e6d.js"></script>
@@ -404,8 +404,8 @@
 <!-- ============================================================================================================================== -->
 <!-- HEADER -->
 <header id="header-start">
-    <img src="https://www.united-domains.de/beispiel-vorlage/images/profilbild.jpg" alt="profilbild" class="cliped-image">
-    <h1>MEIN NAME / FIRMENNAME</h1>
+    <img src="https://raw.githubusercontent.com/inv2u/inversiones2u.online/master/invinm03.jpg" alt="profilbild" class="cliped-image">
+    <h1>INVERSIONES INMOBILIARIAS / ONLINE</h1>
 
     <ul class="icons-social-media">
         <li><a href="https://de.linkedin.com/" title="LinkedIn" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
@@ -416,10 +416,10 @@
 
     <nav>
         <ul>
-            <li><a href="#block-1">ÜBER MICH</a></li>
-            <li><a href="#block-2">LEBENSLAUF</a></li>
-            <li><a href="#block-3">PROJEKTE</a></li>
-            <li><a href="#block-4">KONTAKT</a></li>
+            <li><a href="#block-1">QUIENES SOMOS</a></li>
+            <li><a href="#block-2">PLANES</a></li>
+            <li><a href="#block-3">ÚNETE</a></li>
+            <li><a href="#block-4">CONTACTO</a></li>
         </ul>
     </nav>
 </header>
@@ -429,7 +429,7 @@
 <section id="block-1">
     <i class="fa fa-chevron-down section-arrow" aria-hidden="true"></i>
     <div class="callout text-left">
-        <h3>Über mich</h3>
+        <h3>Quienes somos</h3>
         <hr class="hr-small"/>
 
         <div class="motto">
@@ -437,7 +437,7 @@
                 <img src="https://www.united-domains.de/beispiel-vorlage/images/zitat.png" alt="icon-zitat">
             </div>
             <p>
-                "Perfektion ist nicht dann erreicht, wenn es nichts mehr hinzuzufügen gibt, sondern wenn man nichts mehr weglassen kann."
+                "Una inversión es la que, tras un análisis, promete la seguridad del principal y un adecuado retorno. "
                 <br>
                 <i>- Antoine de Saint-Exupéry</i>
             </p>
@@ -485,7 +485,7 @@
 <section id="block-2">
     <i class="fa fa-chevron-down section-arrow" aria-hidden="true"></i>
     <div class="callout text-left">
-        <h3>Lebenslauf</h3>
+        <h3>Planes</h3>
         <hr class="hr-small"/>
 
         <dl class="definition-list">
@@ -527,7 +527,7 @@
 <section id="block-3">
     <i class="fa fa-chevron-down section-arrow" aria-hidden="true"></i>
     <div class="callout text-center">
-        <h3>Projekte</h3>
+        <h3>Únete</h3>
         <hr class="hr-small"/>
 
         <article class="img-item">
